# krain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: dataset.hpp  error.hpp  linear.hpp  plot.hpp  random.hpp  tensor.hpp  vector.hpp
include/algorithms/: LogisticRegression.hpp
include/dataset/: csv.hpp
include/krain/activation/: Sigmoid.hpp  sigmoid.hpp
include/krain/algorithms/: Interface.hpp  LinearRegression.hpp  LogisticRegression.hpp
include/krain/base/: Base.hpp
include/krain/dataset/: dataset.hpp
include/krain/error/: MSError.hpp
krain/: Cargo.toml
src/: linear.cpp
tests/: tests.cpp  tests_activation.cpp  tests_linear_regression.cpp  tests_logistic_regression.cpp
